finished documenting admin routes
