# src/backend/docs/swagger.yaml
@@ -32,13 +32,13 @@ info:
   title: Pic-keeper APIs
   version: "1.0"
 paths:
-  /authen/v1/login:
+  /admin/v1/login:
     post:
       consumes:
       - application/json
-      description: Login
+      description: Admin login
       parameters:
-      - description: email and password of the user
+      - description: email and password of the administrator
         in: body
         name: Credentials
         required: true
@@ -70,7 +70,7 @@ paths:
                   type: string
               type: object
         "404":
-          description: User does not exist
+          description: Administrator does not exist
           schema:
             allOf:
             - $ref: '#/definitions/model.JSONErrorResult'
@@ -91,7 +91,226 @@ paths:
                 status:
                   type: string
               type: object
-      summary: Login via email and password
+      summary: Admin login via email and password
       tags:
-      - authen
+      - admin
+  /admin/v1/logout:
+    put:
+      consumes:
+      - application/json
+      description: Logout endpoint for administrators
+      parameters:
+      - description: Session token is required
+        in: header
+        name: Token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Logged out successfully
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.JSONSuccessResult'
+            - properties:
+                data:
+                  type: object
+                status:
+                  type: string
+              type: object
+        "404":
+          description: Administrator is no longer existed
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.JSONErrorResult'
+            - properties:
+                error:
+                  type: object
+                status:
+                  type: string
+              type: object
+        "500":
+          description: Unhandled internal server error
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.JSONErrorResult'
+            - properties:
+                error:
+                  type: object
+                status:
+                  type: string
+              type: object
+      summary: Logout endpoint for administrators
+      tags:
+      - admin
+  /admin/v1/refresh:
+    get:
+      consumes:
+      - application/json
+      description: Refresh session token for administrators
+      parameters:
+      - description: Expired token is required
+        in: header
+        name: ExpiredToken
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: The refreshed session token will be returned inside the data
+            field
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.JSONSuccessResult'
+            - properties:
+                data:
+                  type: object
+                status:
+                  type: string
+              type: object
+        "400":
+          description: Incorrect input
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.JSONErrorResult'
+            - properties:
+                error:
+                  type: object
+                status:
+                  type: string
+              type: object
+        "403":
+          description: No Authorization header provided
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.JSONErrorResult'
+            - properties:
+                error:
+                  type: object
+                status:
+                  type: string
+              type: object
+        "404":
+          description: Re-login is needed or the administrator may no longer exist
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.JSONErrorResult'
+            - properties:
+                error:
+                  type: object
+                status:
+                  type: string
+              type: object
+        "500":
+          description: Unhandled internal server error
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.JSONErrorResult'
+            - properties:
+                error:
+                  type: object
+                status:
+                  type: string
+              type: object
+      summary: Refresh session token for administrators
+      tags:
+      - admin
+  /admin/v1/verifications/unverified-photographers:
+    get:
+      consumes:
+      - application/json
+      description: List all unverified photographers
+      parameters:
+      - description: Session token is required
+        in: header
+        name: Token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of unverified photographers will be located inside the
+            data field
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.JSONSuccessResult'
+            - properties:
+                data:
+                  type: object
+                status:
+                  type: string
+              type: object
+        "404":
+          description: Administrator is no longer existed
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.JSONErrorResult'
+            - properties:
+                error:
+                  type: object
+                status:
+                  type: string
+              type: object
+        "500":
+          description: Unhandled internal server error OR session token cannot be
+            verified
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.JSONErrorResult'
+            - properties:
+                error:
+                  type: object
+                status:
+                  type: string
+              type: object
+      summary: List all unverified photographers
+      tags:
+      - admin
+  /admin/v1/verifications/verify/:id:
+    get:
+      consumes:
+      - application/json
+      description: Verify the specified photographer
+      parameters:
+      - description: Session token is required
+        in: header
+        name: Token
+        required: true
+        type: string
+      - description: The ID of the to-be-verified photographer
+        in: path
+        name: photographerId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully verified the photographer
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.JSONSuccessResult'
+            - properties:
+                data:
+                  type: object
+                status:
+                  type: string
+              type: object
+        "500":
+          description: Issues with finding the photographer in the database
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.JSONErrorResult'
+            - properties:
+                error:
+                  type: object
+                status:
+                  type: string
+              type: object
+      summary: Verify the specified photographer
+      tags:
+      - admin
 swagger: "2.0"
